--- a/Byzantine.html
+++ b/Byzantine.html
@@ -570,7 +570,7 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>Byzantine Garden Design</h1>
         <p>The Byzantine period was between the 13th and 15th centuries which is mainly known for the mosaic art, and the decline of Constantinople in 1453. The mosaics represented the melange of the Christian, Hellenistic, Roman, and Oriental traditions.</p>
-        <p><img src="Byzantine.jpg" style="display: block; margin: auto;" width="500" height="350"></p>
+        <p><img src="byzantine.jpg" style="display: block; margin: auto;" width="500" height="350"></p>
     </div>
 
     <!-- Sidebar -->
