--- a/ClassicGreek.html
+++ b/ClassicGreek.html
@@ -581,7 +581,7 @@ text-align: center; /* Centers text horizontally */
         <p><h2>Arches</h2></p>
 <img src="arches.jpg" alt=centered width="350" height="250""</p>
         <p><h2>Water</h2>
-<img src="GreekFountains.jpg" style="display: block; margin: auto;" width="350" height="500">
+<img src="Greekfountains.jpg" style="display: block; margin: auto;" width="350" height="500">
         </p>
     </div>
 
